--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </nav>
         <main class="heading-container">
           <img src="assets/heading.png" alt="">
-          <div style="margin: 15px;" class="btn" id="btn">
-            <svg width="284" height="77" viewBox="0 0 284 77" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <div style="margin: 15px;">
+            <svg width="284" height="77" viewBox="0 0 284 77" fill="none" xmlns="http://www.w3.org/2000/svg" class="btn" id="btn">
                 <g filter="url(#filter0_dii_501_45)">
                 <path d="M6 6H18.8284L21.4142 8.58579L24 6H259.414L262 8.58579L264.586 6H277.414L270.414 13L270.415 13.0008L269.001 14.415L269 14.4142L267 16.4142L263.586 13L267 9.58579L268.416 11.0016L267.002 12.4158L267 12.4142L266.414 13L266.416 13.0016L266.411 13.0068L266.999 13.5947L270.534 10.0592L270.53 10.0555L272.586 8H265.414L262 11.4142L258.586 8H24.8284L21.4142 11.4142L18 8H10.8284L12.8839 10.0555L12.8802 10.0592L16.4157 13.5947L17.0036 13.0068L16.9984 13.0016L17 13L16.4142 12.4142L16.4127 12.4158L14.9984 11.0016L16.4142 9.58579L19.8284 13L16.4142 16.4142L14.4142 14.4142L14.4134 14.415L12.9992 13.0008L13 13L6 6Z" fill="url(#paint0_linear_501_45)"/>
                 <path d="M12.4113 13.5887L10.5 15.5L12.1642 17.1642V59.8358L10.5 61.5L12.4113 63.4113L13.8255 61.997L13.3284 61.5L15.1213 59.7071L14.1642 58.75V18.25L15.1213 17.2929L13.3284 15.5L13.8255 15.003L12.4113 13.5887Z" fill="url(#paint1_linear_501_45)"/>
@@ -72,7 +72,11 @@
                 <text x="50%" y="50%" font-family="Arial, sans-serif" font-size="24" font-style="italic" fill="white" text-anchor="middle" dominant-baseline="middle" letter-spacing="2">
                     Start Game
                   </text>
-                </svg>                
+                </svg>  
+                <p class="typing-effect">
+                  A game made by a team of retarded people for the cool ones
+                </p>              
+
           </div>
         </main>
     </div>
