--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                   </text>
                 </svg>  
                 <p class="typing-effect">
-                  A game made by a team of retarded people for the cool ones
+                  A game made by a team of retarded people for the cool people
                 </p>              
 
           </div>
