command info and battle system

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dusk Tales</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+      </style>
 </head>
 <body>
     <div class="image-container">
@@ -77,6 +80,54 @@
                   A game made by a team of retarded people for the cool people
                 </p>              
 
+          </div>
+          <div class="card">
+              <h1>
+                Hunting System
+              </h1>
+              <p>
+                You can hunt monsters using the <strong style="color: skyblue;">/hunt</strong> command. Each monster has unique item drops that can be used for crafting. Defeating a monster grants you experience points (EXP) and coins.
+              </p>
+          </div>
+          <div class="card">
+            <h1>
+              PvP System
+            </h1>
+             <p>
+              <ul>
+                <li>Attack
+                  <p>
+                    Attacking deals damage to your opponent based on your equipped weapon. Each successful attack grants +1 energy, which can be used for resonance.  
+                  </p>
+                </li>
+                <li>Resonate
+                  <p>
+                    Resonance consumes energy to upgrade your weapon to the next stage, increasing its maximum damage output. Upon reaching the maximum resonance level, some weapons unlock special moves for powerful attacks.  
+                  </p>
+                </li>
+                <li>Battle Items
+                  <p>
+                    Players can equip up to four types of battle items. These items provide various effects, such as healing, buffs, or debuffs. Battle items can be obtained through gameplay and used strategically during fights. 
+                  </p>
+                </li>
+                <li>Victory and Defeat
+                  <p>After winning a battle, the victor can choose one of the following actions:</p>
+                  <ol>
+                    <li><p>Steal Coins:</p> <p>Take 15-25% of the defeated player's coins.</p></li>
+                    <li><p>Steal Item:</p> <p>Loot a random item from the loser’s inventory.</p></li>
+                    <li><p>Imprison:</p> <p>Temporarily lock the losing player out of the game. The imprisoned player can regain access by fulfilling the winner’s demands (such as paying coins or giving up an item).</p></li>
+                    <li><p>Spare:</strong><p>Let the losing player go without penalty.</p></li>
+                  </ol>
+                </li>
+                
+              </ul>
+             </p>
+          </div>
+          <div class="card">
+              <h1>Adventure System</h1>
+              <p>
+                Players can go on adventures using the <strong  style="color: skyblue;">/adventure</strong> command, with a 5-minute cooldown between each attempt. During an adventure, they may encounter random events such as merchants, hidden treasures, or special quests. There is also a chance to obtain rare items, weapons, and armor with unique effects. Adventuring is a great way to discover valuable gear and new opportunities.
+              </p>
           </div>
         </main>
     </div>
