--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <div class="image-container">
         <nav class="logo-container">
             <img src="assets/logo.jpg" alt="" width="150" height="150">
+            <img src="assets/menu-bar.png" alt="" width="40" height="40" style="padding:10px; margin: 5px;" id="hamburger">
         </nav>
+        <div class="menu" id="menu">
+            <ul>
+              <li><a href="Eventinfo.html">Adventure Events</a></li>
+            </ul>
+        </div>
         <main class="heading-container">
           <img src="assets/heading.png" alt="">
           <div style="margin: 15px;">
