Added background music with autoplay trigger

--- a/Eventinfo.html
+++ b/Eventinfo.html
@@ -11,6 +11,20 @@
     <h1 class="heading-container">Adventure Events</h1>
     <div class="container-grid">
         <div class="card">
+            <img src="assets/image7.jpeg" alt="" width="150" height="150">
+            <h1>Corvus the Clover Trader</h1>
+            <p>A wandering trader who appears in all regions, offering to exchange Clovers with players. However, be cautious he has a habit of changing his rates unpredictably and might try to scam you with unusual deals.</p>
+        </div>
+        <div class="card">
+            <img src="assets/image8.jpeg" alt="" width="150" height="150">
+            <p>A fierce blizzard sweeps through, reducing visibility and chilling you to the bone</p>
+            <h3>Options</h3>
+            <ul>
+                <li><strong>Seek Shelter:</strong><p> Stay safe with a small chance to find coins or a Frozen Amulet.  </p></li>
+                <li><strong> Brave the Storm</strong><p>Risk the cold for greater rewards or face the consequences.  </p></li>
+            </ul>
+        </div>
+        <div class="card">
             <img src="assets/image4.jpeg" alt="" width="150" height="150">
             <h1>Shrine</h1>
             <h2>Region: Green Forest</h2>
