--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <video autoplay loop muted playsinline id="background-video">
-    <source src="assets/backgroundgif.mov" type="video/mp4">
+    <source src="assets/backgroundgif.mp4" type="video/mp4">
 </video>
     <div class="image-container">
         <nav class="logo-container">
