--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       </style>
 </head>
 <body>
-  <video autoplay loop muted playsinline id="background-video">
+  <video autoplay loop muted id="background-video">
     <source src="assets/backgroundgif.mp4" type="video/mp4">
 </video>
     <div class="image-container">
