--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <video autoplay loop muted id="background-video">
     <source src="assets/backgroundgif.mp4" type="video/mp4">
 </video>
+<video autoplay loop muted id="background-video-phone" style="display: none;">
+  <source src="assets/PhoneBackgroundgif.mp4" type="video/mp4">
+</video>
     <div class="image-container">
         <nav class="logo-container">
             <img src="assets/logo.jpg" alt="" width="150" height="150">
@@ -89,6 +92,29 @@
                   A game made by a team of retarded people for the cool people
                 </p>              
 
+          </div>
+          <div class="card">
+            <h3>Choose Your Gacha Type:</h3>
+            <ul>
+              <li>
+                <h3>Normal Gacha</h3>
+                <h4>Costs 10 🍀 Clovers per summon</h4>
+                <ol>
+                  <li>Coins (88.5%)</li>
+                  <li>Clovers (8.5%)</li>
+                  <li>Xylo (2%)</li>
+                  <li>Stardust (1%)</li>
+                </ol>
+              </li>
+              <li>
+                <h3>10x Normal Gacha</h3>
+                <h4>Costs 100 🍀 Clovers (10 Rolls at once!)</h4>
+              </li>
+              <li>
+                 <h3>Summon Gacha </h3>
+                 <h4>Costs 3 🧿 Xylo per summon (Characters)</h4>
+              </li>
+            </ul>
           </div>
           <div class="card">
             <h1>Currency System</h1>
@@ -170,17 +196,6 @@
           Background GIF by <a href="https://www.vecteezy.com/members/aleix574986" target="_blank">aleix robert tatjer</a> from vecteezy
         </footer>        
     </div>
-    <script>
-      window.onload = function () {
-          alert("Click OK to enable background music.");
-          let audio = document.getElementById("bg-music");
-          audio.play();
-      };
-      </script>
-      
-      <audio id="bg-music" loop>
-          <source src="assets/backgroundaudio.mp3" type="audio/mp3">
-      </audio>
     <script src="index.js"></script>
 </body>
 </html>
