--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
               </li>
             </ul>
           </div>
+          <audio autoplay loop>
+            <source src="/assets/bgaudio.mp3" type="audio/mp3">
+          </audio>          
           
           <div class="card">
             <h1 class="neon-title">🎯 Hunting System</h1>
